<!-- This is the menu for the main (map) activity, so it has all the 
bells and whistles - search, route tracing, routebook access (TODO), etc -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.coolhandsoftware.topogen.MainActivity" >

    <item android:id="@+id/action_traceroute"
        android:title="@string/traceroute"
        android:icon="@drawable/ic_menu_edit_disabled"
        android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_search"
      	android:title="@string/search_icon"
      	android:icon="@drawable/ic_menu_search_holo_dark"
     	android:showAsAction="ifRoom|collapseActionView"
     	android:actionViewClass="android.widget.SearchView"
     	app:actionViewClass="android.widget.SearchView" />
    
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_menu_help"
        android:showAsAction="ifRoom"/>

</menu>
